# BlueFire-Nexus

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.lab.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: analysis.yml  tests.yml
archive/: ai_analysis.py  build.sh  cloud_abuse.py  deploy.sh  ebpf_hook.c  forensic_logger.py  gpu_payload.py  legal_safeguards.py  payload_injection.py  polymorphic_engine.py
bluefire/: ai.py  config_validator.py
campaigns/: example_campaign.json
config/: config.example.yaml
docs/: AI_MODELS.md  AI_TRAINING.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER.MD  DISCLAIMER.md  FAQ.md  README.md  USAGE_GUIDELINES.md
docs/case-studies/: apt29_credential_access.md  healthcare_ransomware.md  legacy_protocol_pack.md  legacy_stealth_pack.md
docs/reports/: ai_layer.md  ai_operator_audit.md  autonomous_work_log.md  capability_inventory.md  contributor_audit.md  next_roadmap.md  orphan_files.md  release_readiness.md  repo_audit_2026_05_06.md  scenario_validation.md
examples/: basic_simulation.md
legal/: ethical_guidelines.md
plugins/: cobalt_strike.py
scenarios/: apt29_credential_access.yaml  enterprise_intrusion_chain.yaml  fin7_initial_access_to_c2.yaml  healthcare_ransomware.yaml  insider_exfil_dns.yaml  legacy_actor_apt29.yaml  legacy_actor_family_full.yaml  legacy_c2_protocols.yaml  legacy_flagship_blended.yaml  legacy_stealth_research.yaml
scripts/: bluefire.sh  build.sh  deploy.sh  smoke_release_candidate.py
src/: __init__.py  cli.py  legal_safeguards.py  run_scenario.py
src/ai/: attack_path_optimizer.py  vulnerability_predictor.py
src/core/: __init__.py  anti_detection.py  anti_forensic.py  anti_sandbox.py  bluefire.py  bluefire_nexus.py  chain_graph.py  cli.py  config.py  configuration.py  crypto.py  dynamic_api.py  experiments.py  legacy_controls.py  logger.py  models.py  modes.py  mutations.py  network_obfuscator.py  operator_console.py  plugins.py  polymorphic_engine.py  rate_limiter.py  reporting.py  risk.py  safety.py  scenario.py  scenario_planner.py  security.py  telemetry.py  threat_actor.py
src/core/access/: __init__.py  initial_access.py
src/core/actors/: __init__.py  apt28.py  apt29.py  apt32.py  apt38.py  apt41.py  base_apt.py
src/core/ai/: __init__.py  copilot.py  fallback.py  legacy_compat.py  mutation.py  providers.py  rag.py  transport.py  types.py
src/core/anti_detection/: __init__.py  anti_detection.py  manager_impl.py
src/core/collection/: __init__.py  collection.py
src/core/command/: command_control.py
src/core/command_control/: __init__.py  command_control.py
src/core/credential/: __init__.py  credential_access.py
src/core/data_collection/: collection.py
src/core/defense/: __init__.py  anti_detection.py
src/core/defense_evasion/: __init__.py  defense_evasion.py  linux_defense_evasion.py  macos_defense_evasion.py  windows_defense_evasion.py
src/core/detections/: __init__.py  engine.py  sigma.py  spl.py  yara_l.py
src/core/discovery/: __init__.py  discovery.py
src/core/evasion/: __init__.py  anti_detection.py  defense_evasion.py
src/core/execution/: __init__.py  execution.py  linux_execution.py  macos_execution.py  windows_execution.py
src/core/exfiltration/: __init__.py  data_exfiltration.py  exfiltration.py
src/core/impact/: __init__.py  impact.py
src/core/initial_access/: __init__.py  initial_access.py
src/core/intelligence/: __init__.py  apt28_intelligence.py  apt_intelligence.py
src/core/modules/: __init__.py  base.py  chain.py  contracts.py  registry.py
src/core/movement/: __init__.py  lateral_movement.py
src/core/network/: __init__.py  network_obfuscator.py
src/core/persistence/: __init__.py  linux_persistence.py  macos_persistence.py  persistence.py  windows_persistence.py
src/core/privilege/: __init__.py  privilege_escalation.py
src/core/reconnaissance/: __init__.py  reconnaissance.py
src/core/reporting/: __init__.py  apt28_reporting.py  apt29_reporting.py  apt_reporting.py  manifest.py  output_index.py  run_discovery.py  run_reports.py  viewer.py
src/core/resource/: __init__.py  resource_development.py
src/core/runner/: __init__.py  local_runner.py  manifest.py  protocols.py  result.py
src/core/telemetry/: __init__.py  bus.py  sinks.py
src/core/utils/: __init__.py  logger.py
src/examples/: anti_detection_examples.py  apt29_examples.py
src/modules/: ai_analysis.py  cloud_abuse.py  ebpf_hook.c  evasion_techniques.py  forensic_logger.py  gpu_payload.py  legal_safeguards.py
src/operators/: payload_injection.py
src/operators/c2_protocols/: dns_tunneling.py  solana_rpc.py  tls_fast_flux.py  websocket_quic.py
tests/: __init__.py  conftest.py  integration_tests.py  test_ai_codex_sweep_pr53_56.py  test_ai_codex_sweep_pr58_59.py  test_ai_fallback.py  test_ai_provider_anthropic_backend.py  test_ai_provider_cross_provider_coherence.py  test_ai_provider_factory.py  test_ai_provider_gemini_backend.py  test_ai_provider_http_backend.py  test_ai_provider_phase1_contract.py  test_ai_rag.py  test_anti_detection_module.py  test_apt29_scenario_chain.py  test_attack_techniques_drift_invariant.py  test_central_config.py  test_chain_context.py  test_chain_graph.py  test_chain_orchestration.py  test_cli_legacy_presets.py  test_cli_modes.py  test_cli_operator_console.py  test_cli_risk_summary_rationale.py  test_cli_scenario_planner.py  test_cli_simple_presets.py  test_cli_ux_polish.py  test_codex_sweep_demo_readiness.py  test_codex_sweep_viewer_batch.py  test_collection_module.py  test_command_control_adapter.py  test_command_control_endpoint_propagation.py  test_command_control_module.py  test_copilot.py  test_copilot_metadata.py  test_copilot_run_summary.py  test_core.py  test_credential_access_module.py  test_credential_access_target_propagation.py  test_dashboard_quality_polish.py  (+102 more)
tools/ai_trainer/: ai.py  requirements.txt
workflows/: analysis.yml  tests.yml
(+9 files in other folders)
