[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefire-nexus"
version = "2.0.0"
description = "Config-driven purple-team adversary emulation platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BlueFire-Nexus Contributors" }]
dependencies = []

[project.optional-dependencies]
siem = [
  "opensearch-py>=2.6.0",
  "elasticsearch>=8.14.0",
]
ai = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "google-generativeai>=0.7.2",
]
vector = [
  "chromadb>=0.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101"]
