[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefire-nexus"
version = "2.0.0"
description = "Config-driven purple-team adversary emulation platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BlueFire-Nexus Contributors" }]
dependencies = [
  "pyyaml>=6.0.1",
  "cryptography>=41.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
  "scapy>=2.5.0",
  "paramiko>=3.3.0",
  "dnspython>=2.4.0",
  "netifaces>=0.11.0",
  "pyOpenSSL>=23.2.0",
  "pycryptodome>=3.19.0",
  "aiohttp>=3.9.0",
  "websockets>=12.0",
  "PySocks>=1.7.1",
  "python-nmap>=0.7.1",
  "pyshark>=0.6.0",
  "pycryptodomex>=3.19.0",
  "pyjwt>=2.8.0",
  "certifi>=2023.11.17",
  "urllib3>=2.1.0",
  "structlog>=23.2.0",
  "prometheus-client>=0.19.0",
  "python-json-logger>=2.0.7",
  "tqdm>=4.66.1",
  "colorama>=0.4.6",
  "rich>=13.7.0",
  "click>=8.1.7",
]

[project.optional-dependencies]
siem = [
  "opensearch-py>=2.6.0",
  "elasticsearch>=8.14.0",
]
ai = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "google-generativeai>=0.7.2",
]
vector = [
  "chromadb>=0.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
# E501 stays global: MITRE/long-string legacy modules; refactor in focused passes if desired.
ignore = ["E501"]

# Keep E701/B904 enforced for the orchestration/modular spine; suppress only where legacy persists.
extend-per-file-ignores."src/examples/*.py" = ["E701", "B904"]
extend-per-file-ignores."src/legal_safeguards.py" = ["E701", "B904"]
extend-per-file-ignores."src/modules/*.py" = ["E701", "B904"]
extend-per-file-ignores."src/operators/**/*.py" = ["E701", "B904"]
extend-per-file-ignores."src/core/actors/**/*.py" = ["E701", "B904"]
extend-per-file-ignores."src/core/reporting/apt*.py" = ["E701", "B904"]
extend-per-file-ignores."src/core/reporting/apt_reporting.py" = ["E701", "B904"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101"]
